Fixed sidebar being sticky on small screens

--- a/src/pages/EditorPage.module.css
+++ b/src/pages/EditorPage.module.css
@@ -24,10 +24,6 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  position: sticky;
-  top: 32px;
-  align-self: flex-start;
-  z-index: 2;
 }
 
 .main {
@@ -55,6 +51,13 @@
   }
 }
 @media (min-width: 900px) {
+  .sidebar {
+    position: sticky;
+    top: 32px;
+    align-self: flex-start;
+    z-index: 2;
+  }
+
   .main-sub > .p-panel-toggleable {
     flex: 1;
     z-index: 11;
